# lab_2_fast_api

./: main.py  pyproject.toml
api/: users.py
